src/main/java/com/example/bankcards/exception/error/AccessDeniedException.java
package com.example.bankcards.exception.error;

public class AccessDeniedException extends RuntimeException {
    public AccessDeniedException(String message) {
        super(message);
    }
}
